<resources>
    <string name="app_name">AppYuGiOh</string>
    <string name="recherche_de_carte">recherche de carte</string>
    <string name="nom_carte">nom de la carte</string>
    <string name="edition">édition de la carte</string>
    <string name="camera">caméra</string>
    <string name="ouvrir_le_menu_d_roulant">Ouvrir le menu déroulant</string>
    <string name="recherche_de_deck">Recherche de deck</string>
    <string name="carousel_d_image">Carousel d\'image</string>
    <string name="logo_description" />
    <string name="nom_de_la_carte">nom de la carte</string>
    <string name="plus">+</string>
    <string name="rarete">rareté:</string>
    <string name="nextbouton">Bouton suivant</string>
    <string name="bouton_pr_c_dent">Bouton précédent</string>
    <string name="next"><![CDATA[>]]></string>
    <string name="previous"><![CDATA[<]]></string>
    <string name="nom_Carte">nom Carte</string>
    <string name="niveau_rang">Niveau/Rang</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_10">10</string>
    <string name="_11">11</string>
    <string name="_12">12</string>
    <string name="_13">13</string>
    <string name="ok">OK</string>
    <string name="retour">Retour</string>
    <string name="type_carte">Type carte</string>
    <string name="piege">Piège</string>
    <string name="magie">Magie</string>
    <string name="monstre">Monstre</string>
    <string name="skill">Skill</string>
    <string name="token">Token</string>
    <string name="normal">Normal</string>
    <string name="effet">Effet</string>
    <string name="rituel">Rituel</string>
    <string name="synchro">Synchro</string>
    <string name="xyz">XYZ</string>
    <string name="fusion">Fusion</string>
    <string name="link">Link</string>
    <string name="pendule">Pendule</string>
    <string name="type_monstre">Type Monstre</string>
    <string name="rapide">Rapide</string>
    <string name="continu_e">Continue</string>
    <string name="equipement">Equipement</string>
    <string name="terrain">Terrain</string>
    <string name="normale">Normale</string>
    <string name="type_magie">Type Magie</string>
    <string name="type_pi_ge">Type Piège</string>
    <string name="contre">Contre</string>
    <string name="attribut">Attribut</string>
    <string name="terre">TERRE</string>
    <string name="vent">VENT</string>
    <string name="lumiere">LUMIERE</string>
    <string name="tenebre">TENEBRE</string>
    <string name="divin">DIVIN</string>
    <string name="classification_lien">Classification Lien</string>
    <string name="link_1">Link-1</string>
    <string name="link_2">Link-2</string>
    <string name="link_3">Link-3</string>
    <string name="link_4">Link-4</string>
    <string name="link_5">Link-5</string>
    <string name="fl_ches_liens">Flèches Liens</string>
    <string name="haut_gauche">Haut-Gauche</string>
    <string name="haut">Haut</string>
    <string name="haut_droite">Haut-Droite</string>
    <string name="gauche">Gauche</string>
    <string name="droite">Droite</string>
    <string name="bas_gauche">Bas-Gauche</string>
    <string name="bas">Bas</string>
    <string name="bas_droite">Bas-Droite</string>
    <string name="race">Race</string>
    <string name="aqua">Aqua</string>
    <string name="b_te">Bête</string>
    <string name="b_te_guerrier">Bête-guerrier</string>
    <string name="createur">Createur</string>
    <string name="cyberse">Cyberse</string>
    <string name="dinosaure">Dinosaure</string>
    <string name="b_te_divine">Bête Divine</string>
    <string name="feu">FEU</string>
    <string name="eau">EAU</string>
    <string name="reset">Reset</string>
    <string name="top_bottom">Top-Bottom</string>
    <string name="top">Top</string>
    <string name="top_right">Top-Right</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="bottom_left">Bottom-Left</string>
    <string name="bottom">Bottom</string>
    <string name="bottom_right">Bottom-Right</string>
    <string name="filtre">FILTRE</string>
    <string name="edition_de_la_carte">édition de la carte</string>
    <string name="enregistrer">Enregistrer</string>
    <string name="prix">Prix:</string>
    <string name="rarete_deux_points">rareté:</string>
    <string name="textview">TextView</string>
    <string name="carte_du_deck">carte du deck</string>
    <string name="nom_deck">nom Deck</string>
</resources>