<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gris">

    <include layout="@layout/layout_btn_menu_deroulant" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/rechercheCarte"
            android:layout_width="248dp"
            android:layout_height="61dp"
            android:layout_marginStart="44dp"
            android:layout_marginTop="48dp"
            android:ems="10"
            android:inputType="text"
            android:text="@string/nom_Carte"
            app:layout_constraintEnd_toStartOf="@+id/boutonRechercheCarte"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="InvalidId" />

        <ScrollView
            android:id="@+id/scrollViewRecherche"
            android:layout_width="410dp"
            android:layout_height="431dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/boutonFiltre"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="-3dp">

            <LinearLayout
                android:id="@+id/layoutResultatRecherche"
                android:layout_width="412dp"
                android:layout_height="480dp"
                android:layout_marginStart="1dp"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"></LinearLayout>
        </ScrollView>

        <Button
            android:id="@+id/boutonFiltre"
            android:layout_width="401dp"
            android:layout_height="97dp"
            android:layout_marginTop="144dp"
            android:text="FILTRE"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/boutonRechercheCarte"
            android:layout_width="71dp"
            android:layout_height="66dp"
            android:layout_marginTop="48dp"
            android:contentDescription="@string/recherche_de_carte"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@id/rechercheCarte"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/nextButton"
            android:layout_width="65dp"
            android:layout_height="51dp"
            android:layout_marginTop="430dp"
            android:contentDescription="@string/bouton_pr_c_dent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.676"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/scrollView2"
            app:layout_constraintVertical_bias="0.555"
            android:visibility="gone"
            android:text="@string/next"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/previousButton"
            android:layout_width="65dp"
            android:layout_height="51dp"
            android:layout_marginTop="425dp"
            android:contentDescription="@string/nextbouton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.367"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/scrollView2"
            app:layout_constraintVertical_bias="0.526"
            android:visibility="gone"
            android:text="@string/previous"
            tools:ignore="MissingConstraints,UnknownId" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header"
        app:menu="@layout/nav_menu"
        tools:ignore="MissingConstraints" />
</androidx.drawerlayout.widget.DrawerLayout>