<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gris">

    <include layout="@layout/layout_btn_menu_deroulant" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1"
            android:orientation="horizontal">
            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.3"/>
            <HorizontalScrollView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:scrollbars="none"
                android:fillViewport="true">
            <TextView
                android:id="@+id/textViewNomCarte"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/nom_de_la_carte"
                android:textSize="24sp" />
            </HorizontalScrollView>

            <Button
                android:id="@+id/boutonAjoutMesCartes"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:text="@string/plus"
                android:background="@color/purple_700"/>
        </LinearLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nestedScrollView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.9"
            android:fillViewport="true">

            <LinearLayout
                android:id="@+id/LayoutAffiche"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.8"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageViewCarte"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.7"
                        app:srcCompat="@drawable/yugioh_card_back" />
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.3"
                        android:orientation="vertical">
                        <Space
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_weight="0.2"/>
                        <TextView
                            android:id="@+id/textViewPrix"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="0.2"
                            android:text="@string/prix"
                            tools:ignore="NestedWeights" />

                        <Button
                            android:id="@+id/boutonListeEdition"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="0.2"
                            android:text="@string/edition"
                            android:background="@color/rouge"/>

                        <TextView
                            android:id="@+id/textViewRarete"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="0.1"
                            android:text="@string/rarete_deux_points" />
                        <Space
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_weight="0.2"/>
                    </LinearLayout>
                </LinearLayout>
                <TextView
                    android:id="@+id/descriptionCarte"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/textview" />
            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header"
        app:menu="@layout/nav_menu"
        tools:ignore="MissingConstraints" />
</androidx.drawerlayout.widget.DrawerLayout>