<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gris">

    <include layout="@layout/layout_btn_menu_deroulant" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1"
            android:orientation="horizontal">
            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"/>
            <HorizontalScrollView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.6"
                android:fillViewport="true"
                android:scrollbars="none">
                <TextView
                    android:id="@+id/texteTitreDeck"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textSize="32sp"
                    android:inputType="text"
                    android:text="@string/carte_du_deck"
                    tools:ignore="TextViewEdits" />
            </HorizontalScrollView>
            <Button
                android:id="@+id/boutonAjoutUneCarte"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:text="@string/plus" />>

        </LinearLayout>

        <!-- LinearLayout horizontal pour EditText et Bouton Recherche -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1"

            android:orientation="horizontal"
            android:gravity="center_vertical">

            <!-- EditText -->
            <EditText
                android:id="@+id/rechercheMesCartes"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.8"
                android:layout_marginStart="48dp"
                android:inputType="text"
                android:text="@string/nom_Carte"
                android:elevation="2dp" />

            <!-- Bouton Recherche -->
            <ImageButton
                android:id="@+id/boutonRechercheMesCartes"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:contentDescription="@string/recherche_de_carte"
                android:src="@drawable/ic_search"
                android:scaleType="fitCenter"/>
        </LinearLayout>

        <!-- Bouton Filtre -->
        <Button
            android:id="@+id/boutonFiltre"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:text="@string/filtre"
            android:background="@color/purple_500"/>

        <!-- ScrollView -->
        <androidx.core.widget.NestedScrollView
            android:id="@+id/scrollViewRecherche"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5">

            <LinearLayout
                android:id="@+id/layoutResultatRecherche"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <!-- Votre contenu -->
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>



    </LinearLayout>
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header"
        app:menu="@layout/nav_menu"
        tools:ignore="MissingConstraints" />
</androidx.drawerlayout.widget.DrawerLayout>