<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/nomCarte"
            android:layout_width="278dp"
            android:layout_height="73dp"
            android:layout_marginStart="56dp"
            android:layout_marginTop="52dp"
            android:ems="10"
            android:inputType="text"
            android:text="@string/nom_carte"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="InvalidId" />

        <EditText
            android:id="@+id/nomEdition"
            android:layout_width="278dp"
            android:layout_height="73dp"
            android:layout_marginStart="56dp"
            android:layout_marginTop="152dp"
            android:ems="10"
            android:inputType="text"
            android:text="@string/edition"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="InvalidId" />

        <LinearLayout
            android:id="@+id/layoutResultatCam"
            android:layout_width="416dp"
            android:layout_height="400dp"
            android:layout_marginTop="333dp"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageCam"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                 />
        </LinearLayout>

        <Button
            android:id="@+id/boutonAccesCamera"
            android:layout_width="263dp"
            android:layout_height="92dp"
            android:layout_marginStart="72dp"
            android:layout_marginTop="228dp"
            android:text="@string/camera"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header"
        app:menu="@layout/nav_menu"
        tools:ignore="MissingConstraints" />
</androidx.drawerlayout.widget.DrawerLayout>